fixing extra whitespace bug on mobile

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -64,6 +64,12 @@ h4 {
   }
 }
 
+@media (max-width: 575px) {
+  html, body {
+    overflow-x: hidden;
+  }
+}
+
 html {
   // Extra small devices (portrait phones, less than 576px): Optimize for mobile
   @media (max-width: 575px) {
